# BenchTasksCollv3

./: .gitignore  Dockerfile  README.md  README_BASE.md  accounts.md  demo.py  framework_overview.md  installation_guide.md  main.py  pyproject.toml  run_parallel.py  update_logs.md
FAQs/: npm_install.md  npx_install.md  setup_proxy.md
deployment/canvas/: README.md
deployment/canvas/scripts/: create_admin_accounts.py  create_canvas_user.py  setup.sh
deployment/k8s/scripts/: prepare.sh  setup.sh
deployment/poste/scripts/: setup.sh
deployment/utils/: build_proxy.mjs
deployment/woocommerce/scripts/: fix_permissions.sh  setup.sh
global_preparation/: check_installation.py  create_google_credentials.py  create_google_state.py  deploy_containers.sh  how2register_accounts.md  install_env.sh  misc_configuartion.sh
install_records/: arxiv_latex.md  canvas.md  gmail_and_calendar.md  google_forms.md  leetcode.md  playwright.md  scholarly_search.md  snowflake.md  tesseract.md  variflight.md  yahoo_finance.md  youtube.md
local_binary/: github-mcp-version.txt
scenario_clinical_trials/tasks/approved_trials_pool/: README.md
scenario_clinical_trials/tasks/examples/example-trial/: readme.txt
scripts/: debug_manual.sh  dev.sh  run_parallel.sh  run_single_containerized.sh  test_mcp_manually.py  update_trajectory.sh
tasks/examples/example-task/: readme.txt
tasks/examples/example-task/docs/: task.md  user_system_prompt.md
tasks/examples/example-task/groundtruth_workspace/: readme.txt
tasks/examples/example-task/initial_workspace/: readme.txt
tasks/examples/example-task/preprocess/: main.py
tasks/finalpool/activity-logger/docs/: agent_system_prompt.md  task.md
tasks/finalpool/activity-logger/evaluation/: main.py
tasks/finalpool/activity-logger/groundtruth_workspace/: readme.txt
tasks/finalpool/activity-logger/initial_workspace/: readme.txt
tasks/finalpool/alert-system/docs/: agent_system_prompt.md  task.md
tasks/finalpool/alert-system/evaluation/: main.py
tasks/finalpool/alert-system/groundtruth_workspace/: readme.txt
tasks/finalpool/alert-system/initial_workspace/: readme.txt
tasks/finalpool/asset-optimizer/docs/: agent_system_prompt.md  task.md
tasks/finalpool/asset-optimizer/evaluation/: main.py
tasks/finalpool/asset-optimizer/groundtruth_workspace/: readme.txt
tasks/finalpool/asset-optimizer/initial_workspace/: readme.txt
tasks/finalpool/audit-logger/docs/: agent_system_prompt.md  task.md
tasks/finalpool/audit-logger/evaluation/: main.py
tasks/finalpool/audit-logger/groundtruth_workspace/: readme.txt
tasks/finalpool/audit-logger/initial_workspace/: readme.txt
tasks/finalpool/backup-utility/docs/: agent_system_prompt.md  task.md
tasks/haoze/: README.md
tasks/jl/: README.md
tasks/junxian/: test_config.txt
tasks/lv/: README.md
tasks/wenshuo/: README.md
tasks/xiaochen/: test_config.txt
tasks/zhaochen/: README.md  test_config.txt
utils/api_model/: api_utils.py  concurrency_manager.py  model_provider.py  openai_client.py  semaphore.py
utils/app_specific/github/: github_delete_and_refork.py
utils/app_specific/notion/: notion_login_helper.py  notion_page_duplicator.py  notion_remove_and_duplicate.py  notion_remove_page.py
utils/aux_tools/: README_webpage_summary.md  ai_webpage_summary.py  basic.py  context_management_tools.py  history_manager.py  history_tools.py  overlong_tool_manager.py  python_interpretor.py  web_search.py  web_search_legacy.py
utils/conversation/: conversation_manager.py
utils/data_processing/: process_ops.py
utils/data_structures/: agent_config.py  common.py  mcp_config.py  task_config.py  user_config.py
utils/evaluation/: evaluator.py
utils/examples/: api_example.py
utils/general/: base_models.py  helper.py  port_monitor.py
utils/logging/: logging_utils.py
utils/mcp/: stdio2sse_server.py  tool_servers.py
utils/misc/: tool_manager.py
utils/openai_agents_monkey_patch/: custom_mcp_util.py  custom_run_impl.py
utils/roles/: context_managed_runner.py  task_agent.py  user.py
utils/system_prompts/: general_v0.txt
utils/task_runner/: hooks.py  runner.py  termination_checkers.py
(+414 files in other folders)
